@@ -1,3 +1,7 @@
+2005-01-16  Ben Maurer  <bmaurer@ximian.com>
+
+	* Makefile.am: Add Profile.cs
+
 2005-01-11  Ben Maurer  <bmaurer@ximian.com>
 
 	* mono-heap-prof-view.exe.config: not needed
